Lecture on Dictionaries in Python.ipynb

--- a/Lecture on Dictionaries in Python.ipynb
+++ b/Lecture on Dictionaries in Python.ipynb
@@ -65,7 +65,7 @@
    "id": "6a54f75d",
    "metadata": {},
    "source": [
-    "my_dict = {'name': 'Alice', 'age': 30, 'city': 'New York'}"
+    "my_dict = {'name': 'Abdullah', 'age': 20, 'city': 'kuala lumpur'}"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(my_dict['name'])  # Output: Alice"
+    "print(my_dict['name'])  # Output: Abdullah"
    ]
   },
   {
@@ -104,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_dict['occupation'] = 'Data Analyst'  # Add a new key-value pair\n",
-    "my_dict['age'] = 31  # Modify an existing value"
+    "my_dict['occupation'] = 'Engineer'  # Add a new key-value pair\n",
+    "my_dict['age'] = 21  # Modify an existing value"
    ]
   },
   {
