Lecture on Dictionaries in Python.ipynb

--- a/Lecture on Dictionaries in Python.ipynb
+++ b/Lecture on Dictionaries in Python.ipynb
@@ -65,7 +65,7 @@
    "id": "6a54f75d",
    "metadata": {},
    "source": [
-    "my_dict = {'name': 'Abdullah', 'age': 20, 'city': 'kuala lumpur'}"
+    "my_dict = {'name': 'Abdullah', 'age': 20, 'city': 'kuala lumpur','degree':'Data Analyst",'Occupation":"CUI Lahore"}"
    ]
   },
   {
